--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
